Added some styling

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,37 +11,26 @@ body {
   margin: 0 auto;
   display: block;
   vertical-align: top;
-  border: 1px solid black;
-
+  box-shadow: 4px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .btn-container {
   width: 620;
   margin: 0 auto;
-
+  user-select: none;
 }
 
 .btn {
   font-size: 24px;
+  text-align: center;
   width: 120px;
   margin-right: 20;
   display: inline-block;
   padding: 10;
-  border: 1px solid black;
+  box-shadow: 2px 2px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .btn:hover{
    background-color: hsla(142, 92%, 74%, 0.63);
    cursor: hand;
 }
-
-/*.effectDisplay {
-  margin: 0;
-  padding: 5;
-  width: 380;
-  height: 480;
-  vertical-align: top;
-  display: inline-block;
-  border: 1px solid black;
-
-}*/
