--- a/src/css/quicksettings.css
+++ b/src/css/quicksettings.css
@@ -1,3 +1,5 @@
+/*source: https://github.com/bit101/quicksettings*/
+
 .qs_main {
   /*background-color: #dddddd;*/
   text-align: left;
@@ -9,6 +11,7 @@
   -webkit-user-select: none;
   color: #000000;
   border: 1px solid black;
+
 }
 .qs_content {
   /*background-color: #cccccc;*/
@@ -21,7 +24,7 @@
   -webkit-user-select: none;
   cursor: pointer;
   padding: 5px;
-  font-size: 14px;
+  font-size: 24px;
   font-weight: bold;
   border-bottom: 1px solid black;
   color: #000000;
@@ -29,9 +32,9 @@
 .qs_container {
   margin: 5px;
   padding: 5px;
-  /*background-color: #eeeeee;*/
   border: none;
   position: relative;
+  display: inline-block;
 }
 .qs_container_selected {
   border: none;
@@ -133,20 +136,25 @@
 }
 /*========== end range ==========*/
 .qs_button {
-  background-color: #f6f6f6;
+  background-color: hsla(0, 0%, 96%, 0.44);
   color: #000000;
   height: 30px;
-  border: 1px solid #aaaaaa;
-  font: 12px sans-serif;
+  border: 1px solid black;
+  font: 18px monospace;
+  padding-right: 15px;
+  padding-bottom: 30px;
+  display: inline-block;
 }
 .qs_button:active {
   background-color: #ffffff;
-  border: 1px solid #aaaaaa;
 }
 .qs_button:focus {
-  border: 1px solid #aaaaaa;
   outline: none;
 }
+.qs_button:hover {
+  cursor: hand;
+}
+
 .qs_checkbox {
   cursor: pointer;
   display: inline;
@@ -175,7 +183,7 @@
   user-select: none;
   -webkit-user-select: none;
   cursor: default;
-  font: 12px sans-serif;
+  font: 18px monospace;
 }
 .qs_text_input {
   -webkit-box-sizing: border-box;
@@ -201,14 +209,15 @@
   appearance: none;
   color: #000000;
   width: 100%;
-  height: 24px;
-  border: 1px solid #aaaaaa;
+  height: 35px;
+  border: 1px solid black;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
   border-radius: 0;
   padding: 0 5px;
   -moz-outline: none;
-  font-size: 14px;
+  font: 18px monospace;
+  padding: 5px 0 5px 5px;
 }
 .qs_select option {
   font-size: 14px;
