--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,7 +3,14 @@ body {
   padding-top: 100;
   width: 1000;
   margin: 0 auto;
-  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-color: #67D5B5;
+  background: red; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(left top, red, yellow); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(bottom right, red, yellow); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(bottom right, red, yellow); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(to bottom right, red, yellow); /* Standard syntax */
+  background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
+  background-attachment: fixed;
 }
 
 #defaultCanvas0 {
